--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dependencies": {
       "components/jquery": "github:components/jquery@^3.1.1",
       "css": "github:systemjs/plugin-css@^0.1.32",
+      "jquery": "npm:jquery@^3.1.1",
       "react": "npm:react@0.14.8",
       "react-dom": "npm:react-dom@0.14.8",
       "semantic-ui": "github:Semantic-Org/Semantic-UI@^2.2.7"
