--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
       "jquery": "npm:jquery@^3.1.1",
       "react": "npm:react@0.14.8",
       "react-dom": "npm:react-dom@0.14.8",
+      "react-router": "npm:react-router@1.0.0",
       "semantic-ui": "github:Semantic-Org/Semantic-UI@^2.2.7"
     },
     "devDependencies": {
